Upgrade GORM MongoDB to Spring 5, Groovy 2.5.x
- Upgrade to GORM 7.0.0.BUILD-SNAPSHOT
- Update to Gradle 4.x
- Updated to spock-core:1.2-groovy-2.5
- Updated Gradle plugins
- Updated hibernate-validator to 6.x